--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://github.com/ghgrafos">GitHub</a></li>
-        <li><a href="https://studiog8.wordpress.com">Blog</a></li>
-        <li><a href="https://ghgrafos.github.io/mix-services.github.io">Futures</a></li>
+        <li><a href="https://github.com/ghgrafos" target="_blank">GitHub</a></li>
+        <li><a href="https://studiog8.wordpress.com" target="_blank">Blog</a></li>
+        <li><a href="https://ghgrafos.github.io/mix-services.github.io" target="_blank">Futures</a></li>
       </ul>
     </div>
   </div>
@@ -59,18 +59,19 @@
   <h3 class="margin">Onde pode me encrontrar?</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>No PC, tentando entender, como funciona os aplicativos e o densenvolvimento, no desnho, tentandor entender os esboços,
+      <p>No PC, tentando entender, como funciona os aplicativos e o densenvolvimento, no desenho, tentandor entender os esboços,
         na maquina, tentando entender o seu comportamento.</p>
       <img src="assets/img/bg-1.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>No trabalho, tentando entender as máquinas o seu funcionamento, com a familia e amigos,
+      <p>No trabalho, tentando entender as máquinas e o seu funcionamento, com a familia e amigos,
          tentando entender as relações e com a natureza, tentando entender as suas maravilhas.</p>
       <img src="assets/img/bg-2.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>No estudo, a dedicação diária, aprendendo com os mais experientes em cursos e tutoriais, 
+        sem compromisso com o resultado, mas por simples curiosidade e prazer.</p>
+      <img src="assets/img/bg-3.png" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
